--- a/Documentation/Final_Report.tex
+++ b/Documentation/Final_Report.tex
@@ -56,7 +56,7 @@ Vivado HLS and other similar tools can accept C and C++ programs as inputs and p
 \end{figure}
 
 \section{Contributions}
-Our contribution is to automate the design space exploration of HLS projects. We have developed and efficient method that allows Cruise Control to produce a valid solution. To reach this goal, our input parser is developed from scratch. The syntax that it will be looking for is native to HLS applications and can be accomplished  with regular expression processing. We will also have to define and model our own search algorithm for the state space which is something that is also unique. Our approach uses both breadth first search (BFS) as well as random sampling to reach a solution.  Finally, we will have to write our own tool command line (TCL) scripts to automate the process and handle the integration with Vivado HLS. This script is also developed from scratch and is used to make Cruise Control as simple as possible for designers. We believe that these contributions are unique and can make an impact on the HLS community. All of the code is open source and can be found on the Cruise Control Git Hub [4]. 
+Our contribution is to automate the design space exploration of HLS projects. We have developed and efficient method that allows Cruise Control to produce a valid solution. To reach this goal, our input parser is developed from scratch. The syntax that it will be looking for is native to HLS applications and can be accomplished  with regular expression processing. We will also have to define and model our own search algorithm for the state space which is something that is also unique. Our approach uses breadth first search (BFS) on our design space to reach a solution.  Finally, we will have to write our own tool command line (TCL) scripts to automate the process and handle the integration with Vivado HLS. This script is also developed from scratch and is used to make Cruise Control as simple as possible for designers. We believe that these contributions are unique and can make an impact on the HLS community. All of the code is open source and can be found on the Cruise Control Git Hub [4]. 
 
 
 \section{Approach}
