--- a/Documentation/Final_Report.tex
+++ b/Documentation/Final_Report.tex
@@ -42,7 +42,7 @@
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \section{Abstract}
-Vivado High Level Synthesis (HLS) has been proven to be a great tool for the rapid prototyping, development, and optimization of hardware accelerators and IP's. The tools within HLS allow developers to move away from low level hardware description languages and use higher, system level languages such as C and C++. By moving away from the hardware languages, projects developed in HLS have a quicker time to market. While developing in HLS, the optimization that users can place are all done manually. Developers must have an understanding of the different optimization pragmas and how to place them in the code. Once the pragmas are placed, the designer then has to manually tune the parameters in a trial and error fashion until the desired performance, power, and resource utilization is achieved. This parameter tuning can be a tedious and time consuming process. In this paper, we present a tool that will automatically insert and test various placements of optimization pragmas in HLS source code. Our tool, Cruise Control, can be invoked by the user to explore potential pragma placement schemes that will automatically optimize the accelerator while keeping energy constraints in mind.
+Vivado High Level Synthesis (HLS) has been proven to be a great tool for the rapid prototyping, development, and optimization of hardware accelerators and IP's. The tools within HLS allow developers to move away from low level hardware description languages and use higher, system level languages such as C and C++. By moving away from the hardware languages, projects developed in HLS have a quicker time to market. While developing in HLS, the optimization that users can place are all done manually. Developers must have an understanding of the different optimization pragmas and how to place them in the code. Once the pragmas are placed, the designer then has to manually tune the parameters in a trial and error fashion until the desired performance, power, and resource utilization is achieved. This parameter tuning can be a tedious and time consuming process. In this paper, we present a tool that will automatically insert and test various placements of optimization pragmas in HLS source code. Our tool, Cruise Control, can be invoked by the user to explore potential pragma placement schemes that will automatically optimize the accelerator.
 	
 
 \section{Introduction}
@@ -64,7 +64,7 @@ Our approach to create Cruise Control can be broken up into a few steps outlined
 
 \begin{figure}[H]
 \centering
-\includegraphics[scale=.6]{CC_flow.png} 
+\includegraphics[scale=.7]{CC_flow.png} 
 \caption{Cruise Control  flow}
 \end{figure}
 
@@ -72,7 +72,7 @@ After the lines have been added to the input file, the second step of the input 
 
 \begin{figure}[H]
 \centering
-\includegraphics[scale=.35]{for_loops.png} 
+\includegraphics[scale=.3]{for_loops.png} 
 \caption{Loop nesting processing}
 \end{figure}
 
@@ -83,7 +83,7 @@ The input parser works by cycling through all possible design states and enterin
 
 \begin{figure}[H]
 \centering
-\includegraphics[scale=.5]{tcler.png} 
+\includegraphics[scale=.6]{tcler.png} 
 \caption{TCLer control flow}
 \end{figure}
 
@@ -93,7 +93,7 @@ The output of the TCLer is a report file that contains the latency numbers for e
 \begin{figure}[H]
 \centering
 \includegraphics[scale=.5]{outputparser.png} 
-\caption{Output parser format}
+\caption{TCLer output format}
 \end{figure}
 
 \section{Experiment}
@@ -106,23 +106,23 @@ With the output report files from Cruise Control, results of the performance wer
 
 \begin{figure}[H]
 \centering
-\includegraphics[scale=.4]{result0.png} 
-\caption{Cruise Control performnace speed ups}
+\includegraphics[scale=.35]{result0.png} 
+\caption{Cruise Control performance speed up}
 \end{figure}
 
 The itemized list of run iteration and cycle count could be easily graphed. The first run that Cruise Control analyzes is the original source code without any pragmas inserted. This allows performance numbers to be generated to see speed up from the original design. Figure 7 shows the data collected from the matrix multiplication test. The first few run iterations had little effect on the performance of the design. The last few iterations evaluated showed a 7.5x speed up from the base design. This result shows that Cruise Control is able to discover and leverage the inherit speed up found in parallel work. \newline 
 
 \begin{figure}[H]
 \centering
-\includegraphics[scale=.43]{result1.png} 
+\includegraphics[scale=.4]{result1.png} 
 \caption{Matrix multiplication results}
 \end{figure}
 
-When looking at larger designs, more conclusions can be reached. Figure 8 outlines the results found for the larger tests of Cruise Control on the fifth convolution layer and fully connected layers for LeNet. As these results show, there are a few design states that have significant negative impacts on the performance. This is because of the loop unroll factor chosen for the parallel work did not always match the bounds of the for loops. This design choice produces more dense logic that becomes a bottle neck for the design as opposed to accelerating it. Significant performance increases were also discovered in the search by Cruise Control. States that resulted in a 1.8x speed up for both tests were found. The wave like data shown in the graph comes from the similarity in variations of the pragma placement. Often, the choice to include or exclude the pragmas in different locations can have identical impacts on performance. \newline
+When looking at larger designs, more conclusions can be reached. Figure 8 outlines the results found for the larger tests of Cruise Control on the fifth convolution layer and fully connected layers for LeNet. As these results show, there are a few design states that have significant negative impacts on the performance. This is because of the loop unroll factor chosen for the parallel work did not always match the bounds of the for loops. This design choice produces more dense logic that becomes a bottle neck for the design as opposed to accelerating it. Significant performance increases were also discovered in the search by Cruise Control. States that resulted in a 1.8x speed up for both tests were found. The wave like data shown in the graph comes from the similarity in variations of the pragma placement. Often, the choice to include or exclude the pragmas in different locations can have similar impacts on performance. \newline
 
 \begin{figure}[H]
 \centering
-\includegraphics[scale=.45]{result2.png} 
+\includegraphics[scale=.4]{result2.png} 
 \caption{LeNet layer results}
 \end{figure}
 
@@ -132,13 +132,13 @@ In addition to the performance speed up found by Cruise Control, the automation 
 
 
 \section{Conclusion}
-In this paper we present Cruise Control, an automatic tool to explore the design space for HLS projects. The control flow for the project is broken into an input parser to pre-process the input design, a TCL script to automate the design state exploration, and and output parser to format the results for easy examination. As seen from the results, Cruise Control is able to properly find a valid design state that optimizes the performance of a HLS design. From small to large projects, Cruise Control quickly moves through the search states to find a solution. In addition to the performance increases, Cruise Control is able to perform its job much more quickly than a human designer. This time saved can be of great use because now the designer can work on other material as Cruise Control runs knowing an optimal solution will be produced. The tool is also easy to integrate into any existing  HLS project. The tool is in early stages of the design process and can be capable of much more. 
+In this paper we present Cruise Control, an automatic tool to explore the design space for HLS projects. The control flow for the project is broken into an input parser to pre-process the input design, a TCL script to automate the design state exploration, and and output parser to format the results for easy examination. As seen from the results, Cruise Control is able to properly find a valid design state that optimizes the performance of a HLS design. From small to large projects, Cruise Control quickly moves through the search states to find a solution. In addition to the performance increases, Cruise Control is able to perform its job much more quickly than a human designer. This time saved can be of great use because now the designer can work on other material as Cruise Control runs knowing an optimal solution will be produced. The tool is also easy to integrate into any existing  HLS project. The tool is in early stages of the design process and can easily be capable of much more. 
 
 
 \section{Future Work}
-There is some work that can be done on Cruise Control. One of the most important works to be done is a smarter design space search algorithm. A BFS is currently used which can result in long run times for the tool. As the number of for loops increases in a design, the total number of states increase exponentially. This exponential growth is not good. To counter this issue, a heuristic base search can be implemented to cut down the number of states explored. Only pursing states that have a high probability of being optimal would make the scaling more efficient. \newline
-Adding support for power analysis would also allow Cruise Control to factor in power constraints on designs. To have a power report though, the placement and routing for the HLS project must be run. This run is often time consuming and would render the time saving ability of Cruise Control useless. A power approximation engine for the HLS project  could help save some time in this area and would add a core functionality to the tool. \newline
-Lastly, different optimization pragmas can be tried as well. The current tool only looks for for loops to add loop unrolls. Other pragmas such as pipelines and interfaces can also be added to the design to reach even larger performance increases for the design. 
+One of the search strategies we are currently evaluating is Simulated Annealing. We are using the \textit{simulation} TCL Library to use a simulated annealing technique to search the vast search space. Unfortunately this library is having some problems internally and It is hard to figure out what the reason for the internal failure is. This is proving to be difficult to solve with the limited TCL experience we have but we will continue to work on the tool to improve the search speed. We know that the design space has many local minimums, the simulated annealing would enable the tool to converge on an optimal solution.\newline
+Adding support for power analysis would also allow Cruise Control to factor in power constraints on designs. To have a power report though, the placement and routing for the HLS project must be run. This run is often time consuming and would render the time saving ability of Cruise Control useless. We intend to add seamless integration with the power analyzer once the TCLer returns a set of optimized results so that the results can be analyzed for power as well. The documentation for Vivado\_HLS does not make it clear how to do this but it is something we are working on integrating.The synthesis step generates RTL which we want to pass to regular Vivado to place and route and then run the power analysis tool on the placed and routed design. \newline
+Lastly, different optimization pragmas can be tried as well. The current tool only looks for for loops to add loop unrolls. Other pragmas such as pipelines and interfaces can also be added to the design to reach even larger performance increases for the design. Currently the parser can extract loop information like the upper bounds, and lower bounds, as well which order the loop is in the nesting hierarchy. More permutations of the original source could easily be generated with different loop unrolling factors. Unfortunately this functionality was disrupted by the issues with the simulated annealing. Adding this functionality would make the search space much larger than our current implementation so we wanted to have simulated annealing working first before attempting to search such a massive search space.
 
 
 \section{Cited Works}
